# SUMOLibraries

./: .gitignore  README.md  config.props  setPATH32.bat  setPATH64.bat  update.bat
fox-1.6.58/: Makefile.am  configure  configure.ac
fox-1.6.58/calculator/: Makefile.in
fox-1.6.58/doc/: top.html
fox-1.6.58/include/: FXString.h  fxver.h
fox-1.6.58/lib/: fox-16.exp  fox-16.lib  fox-16d.exp
fox-1.6.58/src/: FXApp.cpp  FXStat.cpp  FXThread.cpp  version.rc
fox-1.7.83/: Makefile.am  Makefile.in  configure  configure.ac  fox-config  fox.spec  fox.spec.in  fox17.pc.in
fox-1.7.83/adie/: Adie.cpp  Adie.h  Adie.stx  Commands.cpp  Commands.h  FindInFiles.cpp  FindInFiles.h  HelpWindow.cpp  HelpWindow.h  Makefile.am  Makefile.in  Modeline.cpp  Modeline.h  Preferences.cpp  Preferences.h  ShellCommand.cpp  ShellCommand.h  ShellDialog.cpp  ShellDialog.h  Syntax.cpp  Syntax.h  SyntaxParser.cpp  SyntaxParser.h  TextWindow.cpp  TextWindow.h  adie.1  help.cpp  help.h  help.txt  icons.cpp  icons.h  main.cpp
fox-1.7.83/calculator/: Calculator.cpp  Calculator.h  HelpWindow.cpp  HelpWindow.h  Makefile.am  Makefile.in  Preferences.cpp  Preferences.h  calculator.1  help.cpp  icons.cpp  icons.h  main.cpp
fox-1.7.83/chart/: FX2DChart.cpp  FX2DChart.h  FX2DPlot.cpp  FX2DPlot.h  FXAxis.cpp  FXAxis.h  FXChart.cpp  FXChart.h  FXCurve.cpp  FXCurve.h  Makefile.am  Makefile.in  chart.h  chartdefs.h  charttest.cpp  chartutils.cpp  chartutils.h  icons.cpp  icons.h
fox-1.7.83/controlpanel/: ControlPanel.1  ControlPanel.cpp  ControlPanel.h  Makefile.am  Makefile.in  icons.cpp  icons.h
fox-1.7.83/doc/: Makefile.in  adie.html  app.html  calc.html  clipboard.html  consulting.html  datatarget.html  doc.html  download.html  doxygen.cfg  draganddrop.html  faq.html  filefuncs.html  focus.html  fonts.html  footer.html  foreword.html  goals.html  gpgkey.html  guiupdate.html  home.html  icons.html  install.html  introduction.html  layout.html  license.html  menu.css  menu.html  messages.html  news.html  news1.html  news2.html  news3.html  pathfinder.html  projects.html  references.html  registry.html  rex.html  screenshots.html  serialization.html  (+7 more)
fox-1.7.83/doc/art/: Makefile.in
fox-1.7.83/doc/screenshots/: Makefile.am  Makefile.in
fox-1.7.83/glviewer/: FXGLCone.cpp  FXGLCone.h  FXGLCube.cpp  FXGLCube.h  FXGLCylinder.cpp  FXGLCylinder.h  FXGLLine.cpp  FXGLLine.h  FXGLPoint.cpp  FXGLPoint.h  FXGLShape.cpp  FXGLShape.h  FXGLSphere.cpp  FXGLSphere.h  FXGLTriangleMesh.cpp  FXGLTriangleMesh.h  Makefile.am  Makefile.in  glviewer.cpp
fox-1.7.83/include/: FXXMLFile.h  Makefile.am  Makefile.in  xincs.h
fox-1.7.83/lib/: FOX-1.7.exp  FOX-1.7.lib  Makefile.am  Makefile.in
fox-1.7.83/pathfinder/: CopyDialog.cpp  CopyDialog.h  Makefile.am  Makefile.in  PathFinder.1  PathFinder.cpp  PathFinder.h  Preferences.cpp  Preferences.h  PropertyDialog.cpp  PropertyDialog.h  icons.cpp  icons.h
fox-1.7.83/shutterbug/: Makefile.am  Makefile.in  ShutterBug.cpp  ShutterBug.h  Snapper.cpp  Snapper.h  icons.cpp  icons.h  shutterbug.1
fox-1.7.83/src/: FXApp.cpp  FXXMLFile.cpp  icons.cpp  icons.h
fox-1.7.83/tests/: Makefile.am  Makefile.in  bitmapviewer.cpp  button.cpp  calendar.cpp  codecs.cpp  console.cpp  datatarget.cpp  dctest.cpp  dialog.cpp  dirlist.cpp  expression.cpp  format.cpp  foursplit.cpp  gaugetest.cpp  gltest.cpp  groupbox.cpp  half.cpp  header.cpp  hello.cpp  hello2.cpp  iconlist.cpp  image.cpp  imageviewer.cpp  layout.cpp  match.cpp  math.cpp  mditest.cpp  memmap.cpp  minheritance.cpp  parallel.cpp  process.cpp  ratio.cpp  rex.cpp  scan.cpp  scribble.cpp  shutter.cpp  splitter.cpp  switcher.cpp  tabbook.cpp  (+8 more)
fox-1.7.83/utils/: Makefile.am  Makefile.in
fox-1.7.83/windows/: Makefile.am  Makefile.in  vs.sln  vs.vcxproj
fox-1.7.83/windows/BitmapViewer/: BitmapViewer.vcxproj  BitmapViewer.vcxproj.filters
fox-1.7.83/windows/Button/: Button.vcxproj  Button.vcxproj.filters
fox-1.7.83/windows/Calculator/: Calculator.vcxproj  Calculator.vcxproj.filters
fox-1.7.83/windows/Calendar/: Calendar.vcxproj  Calendar.vcxproj.filters
fox-1.7.83/windows/DataTarget/: DataTarget.vcxproj  DataTarget.vcxproj.filters
fox-1.7.83/windows/DirList/: DirList.vcxproj  DirList.vcxproj.filters
fox-1.7.83/windows/Expression/: Expression.vcxproj  Expression.vcxproj.filters
fox-1.7.83/windows/Format/: Format.vcxproj  Format.vcxproj.filters
fox-1.7.83/windows/FourSplit/: FourSplit.vcxproj  FourSplit.vcxproj.filters
fox-1.7.83/windows/GLTest/: GLTest.vcxproj  GLTest.vcxproj.filters
fox-1.7.83/windows/GLViewer/: GLViewer.vcxproj  GLViewer.vcxproj.filters
fox-1.7.83/windows/GaugeTest/: GaugeTest.vcxproj  GaugeTest.vcxproj.filters
fox-1.7.83/windows/GroupBox/: GroupBox.vcxproj  GroupBox.vcxproj.filters
fox-1.7.83/windows/Header/: Header.vcxproj  Header.vcxproj.filters
fox-1.7.83/windows/Hello/: Hello.vcxproj  Hello.vcxproj.filters
fox-1.7.83/windows/Hello2/: Hello2.vcxproj  Hello2.vcxproj.filters
fox-1.7.83/windows/Image/: Image.vcxproj  Image.vcxproj.filters
fox-1.7.83/windows/ImageViewer/: ImageViewer.vcxproj  ImageViewer.vcxproj.filters
fox-1.7.83/windows/Layout/: Layout.vcxproj  Layout.vcxproj.filters
fox-1.7.83/windows/MDITest/: MDITest.vcxproj  MDITest.vcxproj.filters
fox-1.7.83/windows/MappedFile/: mappedfile.vcxproj  mappedfile.vcxproj.filters
fox-1.7.83/windows/PathFinder/: PathFinder.vcxproj  PathFinder.vcxproj.filters
fox-1.7.83/windows/Process/: Process.vcxproj  Process.vcxproj.filters
fox-1.7.83/windows/Ratio/: Ratio.vcxproj  Ratio.vcxproj.filters
fox-1.7.83/windows/Rex/: Rex.vcxproj  Rex.vcxproj.filters
fox-1.7.83/windows/Scribble/: Scribble.vcxproj  Scribble.vcxproj.filters
fox-1.7.83/windows/Shutter/: Shutter.vcxproj  Shutter.vcxproj.filters
fox-1.7.83/windows/ShutterBug/: ShutterBug.vcxproj  ShutterBug.vcxproj.filters
fox-1.7.83/windows/Splitter/: Splitter.vcxproj  Splitter.vcxproj.filters
fox-1.7.83/windows/Switcher/: Switcher.vcxproj  Switcher.vcxproj.filters
fox-1.7.83/windows/TabBook/: TabBook.vcxproj  TabBook.vcxproj.filters
fox-1.7.83/windows/XML/: XML.vcxproj  (+1 more)
(+32979 files in other folders)
