## Process this file with automake to produce Makefile.in


foxincludedir=$(includedir)/fox-1.7

CODECS = \
FX88591Codec.h \
FX88592Codec.h \
FX88593Codec.h \
FX88594Codec.h \
FX88595Codec.h \
FX88596Codec.h \
FX88597Codec.h \
FX88598Codec.h \
FX88599Codec.h \
FX885910Codec.h \
FX885911Codec.h \
FX885913Codec.h \
FX885914Codec.h \
FX885915Codec.h \
FX885916Codec.h \
FXCP437Codec.h \
FXCP850Codec.h \
FXCP852Codec.h \
FXCP855Codec.h \
FXCP856Codec.h \
FXCP857Codec.h \
FXCP860Codec.h \
FXCP861Codec.h \
FXCP862Codec.h \
FXCP863Codec.h \
FXCP864Codec.h \
FXCP865Codec.h \
FXCP866Codec.h \
FXCP869Codec.h \
FXCP874Codec.h \
FXCP1250Codec.h \
FXCP1251Codec.h \
FXCP1252Codec.h \
FXCP1253Codec.h \
FXCP1254Codec.h \
FXCP1255Codec.h \
FXCP1256Codec.h \
FXCP1257Codec.h \
FXCP1258Codec.h \
FXKOI8RCodec.h \
FXUTF8Codec.h \
FXUTF16Codec.h \
FXUTF32Codec.h

foxinclude_HEADERS =   \
$(CODECS) \
FX4Splitter.h \
FX7Segment.h \
FXAccelTable.h \
FXApp.h \
FXArray.h \
FXArrowButton.h \
FXAtomic.h \
FXAutoPtr.h \
FXAutoThreadStorageKey.h \
FXBarrier.h \
FXBMPIcon.h \
FXBMPImage.h \
FXBitmap.h \
FXBitmapFrame.h \
FXBitmapView.h \
FXButton.h \
FXBZFileStream.h \
FXCURCursor.h \
FXCallback.h \
FXCalendar.h \
FXCalendarView.h \
FXCanvas.h \
FXCheckButton.h \
FXChoiceBox.h \
FXColorBar.h \
FXColorDialog.h \
FXColorList.h \
FXColorRing.h \
FXColors.h \
FXColorSelector.h \
FXColorWell.h \
FXColorWheel.h \
FXComboBox.h \
FXCompletion.h \
FXComplexf.h \
FXComplexd.h \
FXComposeContext.h \
FXComposite.h \
FXCondition.h \
FXConsole.h \
FXCursor.h \
FXDate.h \
FXDC.h \
FXDCPrint.h \
FXDCWindow.h \
FXDDSIcon.h \
FXDDSImage.h \
FXDLL.h \
FXDataTarget.h \
FXDebugTarget.h \
FXDelegator.h \
FXDial.h \
FXDialogBox.h \
FXDictionary.h \
FXDictionaryOf.h \
FXDir.h \
FXDirBox.h \
FXDirDialog.h \
FXDirList.h \
FXDirSelector.h \
FXDirVisitor.h \
FXDirWatch.h \
FXDispatcher.h \
FXDisplay.h \
FXDockBar.h \
FXDockHandler.h \
FXDockSite.h \
FXDockTitle.h \
FXDocument.h \
FXDragCorner.h \
FXDrawable.h \
FXDriveBox.h \
FXElement.h \
FXEvent.h \
FXEventDispatcher.h \
FXEventLoop.h \
FXException.h \
FXEXEIcon.h \
FXEXEImage.h \
FXExpression.h \
FXExtentd.h \
FXExtentf.h \
FXFile.h \
FXFileAssociations.h \
FXFileDialog.h \
FXFileList.h \
FXFileProgressDialog.h \
FXFileSelector.h \
FXFileStream.h \
FXFoldingList.h \
FXFont.h \
FXFontDialog.h \
FXFontSelector.h \
FXFrame.h \
FXGIFCursor.h \
FXGIFIcon.h \
FXGIFImage.h \
FXGLCanvas.h \
FXGLContext.h \
FXGLObject.h \
FXGLViewer.h \
FXGLVisual.h \
FXGauge.h \
FXGradientBar.h \
FXGroupBox.h \
FXGZFileStream.h \
FXhalf.h \
FXHash.h \
FXHashOf.h \
FXHeader.h \
FXHorizontalFrame.h \
FXICOIcon.h \
FXICOImage.h \
FXIFFImage.h \
FXIFFIcon.h \
FXINI.h \
FXINIFile.h \
FXIO.h \
FXIOBuffer.h \
FXIODevice.h \
FXIcon.h \
FXIconCache.h \
FXIconList.h \
FXIconSource.h \
FXId.h \
FXImage.h \
FXImageFrame.h \
FXImageView.h \
FXInputDialog.h \
FXJP2Icon.h \
FXJP2Image.h \
FXJPGIcon.h \
FXJPGImage.h \
FXJSON.h \
FXJSONFile.h \
FXJSONString.h \
FXKnob.h \
FXLabel.h \
FXLFQueue.h \
FXList.h \
FXListBox.h \
FXLocale.h \
FXMDIButton.h \
FXMDIChild.h \
FXMDIClient.h \
FXMainWindow.h \
FXMappedFile.h \
FXMat2d.h \
FXMat2f.h \
FXMat3d.h \
FXMat4d.h \
FXMat3f.h \
FXMat4f.h \
FXMatrix.h \
FXMemoryStream.h \
FXMenuBar.h \
FXMenuButton.h \
FXMenuCaption.h \
FXMenuCascade.h \
FXMenuCheck.h \
FXMenuRadio.h \
FXMenuCommand.h \
FXMenuPane.h \
FXMenuSeparator.h \
FXMenuTitle.h \
FXMessageBox.h \
FXMessageChannel.h \
FXMetaClass.h \
FXMutex.h \
FXObject.h \
FXObjectList.h \
FXOptionMenu.h \
FXPCXIcon.h \
FXPCXImage.h \
FXPNGIcon.h \
FXPNGImage.h \
FXPPMIcon.h \
FXPPMImage.h \
FXPacker.h \
FXParallel.h \
FXParseBuffer.h \
FXPath.h \
FXPicker.h \
FXPipe.h \
FXPoint.h \
FXPopup.h \
FXPrintDialog.h \
FXProcess.h \
FXProgressBar.h \
FXProgressDialog.h \
FXPtrList.h \
FXPtrQueue.h \
FXQuatd.h \
FXQuatf.h \
FXRASIcon.h \
FXRASImage.h \
FXRGBIcon.h \
FXRGBImage.h \
FXRadioButton.h \
FXRandom.h \
FXRangef.h \
FXRanged.h \
FXRangeSlider.h \
FXReactor.h \
FXReadWriteLock.h \
FXRealSlider.h \
FXRealSpinner.h \
FXRecentFiles.h \
FXRectangle.h \
FXRefPtr.h \
FXRegion.h \
FXRegistry.h \
FXReplaceDialog.h \
FXReverseDictionary.h \
FXReverseDictionaryOf.h \
FXRex.h \
FXRootWindow.h \
FXRuler.h \
FXRulerView.h \
FXRunnable.h \
FXScopedThread.h \
FXScrollArea.h \
FXScrollBar.h \
FXScrollPane.h \
FXScrollWindow.h \
FXSearchDialog.h \
FXSemaphore.h \
FXSemaQueue.h \
FXSeparator.h \
FXSettings.h \
FXShell.h \
FXShutter.h \
FXSize.h \
FXSlider.h \
FXSocket.h \
FXSpinner.h \
FXSpinLock.h \
FXSpheref.h \
FXSphered.h \
FXSplashWindow.h \
FXSplitter.h \
FXSpring.h \
FXStat.h \
FXStatusBar.h \
FXStatusLine.h \
FXStream.h \
FXString.h \
FXStringDictionary.h \
FXSwitcher.h \
FXSystem.h \
FXTGAIcon.h \
FXTGAImage.h \
FXTIFIcon.h \
FXTIFImage.h \
FXTabBar.h \
FXTabBook.h \
FXTabItem.h \
FXTable.h \
FXTaskGroup.h \
FXText.h \
FXTextCodec.h \
FXTextField.h \
FXThread.h \
FXThreadPool.h \
FXToggleButton.h \
FXToolBar.h \
FXToolBarGrip.h \
FXToolBarShell.h \
FXToolBarTab.h \
FXToolTip.h \
FXTopWindow.h \
FXTranslator.h \
FXTreeList.h \
FXTreeListBox.h \
FXTriStateButton.h \
FXUndoList.h \
FXURL.h \
FXVariant.h \
FXVariantArray.h \
FXVariantMap.h \
FXVec2d.h \
FXVec2f.h \
FXVec3d.h \
FXVec3f.h \
FXVec4d.h \
FXVec4f.h \
FXVerticalFrame.h \
FXVisual.h \
FXWEBPIcon.h \
FXWEBPImage.h \
FXWindow.h \
FXWizard.h \
FXWorker.h \
FXWSQueue.h \
FXXML.h \
FXXMLFile.h \
FXXMLString.h \
FXXBMIcon.h \
FXXBMImage.h \
FXXPMIcon.h \
FXXPMImage.h \
fx.h \
fx3d.h \
fxascii.h \
fxchar.h \
fxcpuid.h \
fxdefs.h \
fxmath.h \
fxendian.h \
fxkeys.h \
fxunicode.h \
fxver.h \
xincs.h
