## Process this file with automake to produce Makefile.in


AM_CXXFLAGS = @X_CFLAGS@
INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/include
RESWRAP  = $(top_builddir)/utils/reswrap$(EXEEXT)
SUFFIXES = .gif .bmp

lib_LTLIBRARIES = libFOX-1.7.la

libFOX_1_7_la_LIBADD  = $(X_LIBS) $(X_PRE_LIBS) $(X_BASE_LIBS) $(X_EXTRA_LIBS) $(GL_LIBS)

libFOX_1_7_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) -export-dynamic -no-undefined

if COND_OSWINDOWS
AM_CXXFLAGS += -DFOXDLL -DFOXDLL_EXPORTS -DWIN32 -DNDEBUG -D_WINDOWS -DUNICODE -D_USRDLL -D_CRT_SECURE_NO_WARNINGS
libFOX_1_7_la_LDFLAGS += -lcomctl32 -lwsock32 -limm32 -lmsimg32
endif

CURSORS = \
$(top_srcdir)/lib/blank.xbm \
$(top_srcdir)/lib/blank_mask.xbm \
$(top_srcdir)/lib/crosshair.xbm \
$(top_srcdir)/lib/crosshair_mask.xbm \
$(top_srcdir)/lib/dndask.xbm \
$(top_srcdir)/lib/dndask_mask.xbm \
$(top_srcdir)/lib/dndcopy.xbm \
$(top_srcdir)/lib/dndcopy_mask.xbm \
$(top_srcdir)/lib/dndlink.xbm \
$(top_srcdir)/lib/dndlink_mask.xbm \
$(top_srcdir)/lib/dndmove.xbm \
$(top_srcdir)/lib/dndmove_mask.xbm \
$(top_srcdir)/lib/dontdrop.xbm \
$(top_srcdir)/lib/dontdrop_mask.xbm \
$(top_srcdir)/lib/drag.xbm \
$(top_srcdir)/lib/drag_mask.xbm \
$(top_srcdir)/lib/gray.xbm \
$(top_srcdir)/lib/hand.xbm \
$(top_srcdir)/lib/hand_mask.xbm \
$(top_srcdir)/lib/helparrow.xbm \
$(top_srcdir)/lib/helparrow_mask.xbm \
$(top_srcdir)/lib/hsplit.xbm \
$(top_srcdir)/lib/hsplit_mask.xbm \
$(top_srcdir)/lib/move.xbm \
$(top_srcdir)/lib/move_mask.xbm \
$(top_srcdir)/lib/ne.xbm \
$(top_srcdir)/lib/ne_mask.xbm \
$(top_srcdir)/lib/se.xbm \
$(top_srcdir)/lib/se_mask.xbm \
$(top_srcdir)/lib/sw.xbm \
$(top_srcdir)/lib/sw_mask.xbm \
$(top_srcdir)/lib/nw.xbm \
$(top_srcdir)/lib/nw_mask.xbm \
$(top_srcdir)/lib/resizeleft.xbm \
$(top_srcdir)/lib/resizeleft_mask.xbm \
$(top_srcdir)/lib/resizetop.xbm \
$(top_srcdir)/lib/resizetop_mask.xbm \
$(top_srcdir)/lib/resizetopleft.xbm \
$(top_srcdir)/lib/resizetopleft_mask.xbm \
$(top_srcdir)/lib/resizetopright.xbm \
$(top_srcdir)/lib/resizetopright_mask.xbm \
$(top_srcdir)/lib/rotate.xbm \
$(top_srcdir)/lib/rotate_mask.xbm \
$(top_srcdir)/lib/swatch.xbm \
$(top_srcdir)/lib/swatch_mask.xbm \
$(top_srcdir)/lib/vsplit.xbm \
$(top_srcdir)/lib/vsplit_mask.xbm \
$(top_srcdir)/lib/xsplit.xbm \
$(top_srcdir)/lib/xsplit_mask.xbm

ICONS = \
$(top_srcdir)/lib/arrownext.gif \
$(top_srcdir)/lib/arrowprev.gif \
$(top_srcdir)/lib/bigapp.gif \
$(top_srcdir)/lib/bigcdrom.gif \
$(top_srcdir)/lib/bigcomputer.gif \
$(top_srcdir)/lib/bigdesktop.gif \
$(top_srcdir)/lib/bigdoc.gif \
$(top_srcdir)/lib/bigfloppy.gif \
$(top_srcdir)/lib/bigfloppy3.gif \
$(top_srcdir)/lib/bigfloppy5.gif \
$(top_srcdir)/lib/bigfolder.gif \
$(top_srcdir)/lib/bigfolderopen.gif \
$(top_srcdir)/lib/bigharddisk.gif \
$(top_srcdir)/lib/bignetdrive.gif \
$(top_srcdir)/lib/bignethood.gif \
$(top_srcdir)/lib/bookmrk_gif.gif \
$(top_srcdir)/lib/bookclr_gif.gif \
$(top_srcdir)/lib/bookset_gif.gif \
$(top_srcdir)/lib/bookdel_gif.gif \
$(top_srcdir)/lib/clearentry.gif \
$(top_srcdir)/lib/cmymode.gif \
$(top_srcdir)/lib/dialmode.gif \
$(top_srcdir)/lib/dirup_gif.gif \
$(top_srcdir)/lib/docktop.gif \
$(top_srcdir)/lib/dockbottom.gif \
$(top_srcdir)/lib/dockleft.gif \
$(top_srcdir)/lib/dockright.gif \
$(top_srcdir)/lib/dockfree.gif \
$(top_srcdir)/lib/dockflip.gif \
$(top_srcdir)/lib/entericon.gif \
$(top_srcdir)/lib/erroricon.gif \
$(top_srcdir)/lib/eyedrop.gif \
$(top_srcdir)/lib/filecancel.gif \
$(top_srcdir)/lib/fileaccept.gif \
$(top_srcdir)/lib/filecopy.gif \
$(top_srcdir)/lib/filemove.gif \
$(top_srcdir)/lib/filehidden.gif \
$(top_srcdir)/lib/filelink.gif \
$(top_srcdir)/lib/filerename.gif \
$(top_srcdir)/lib/filedelete.gif \
$(top_srcdir)/lib/fileshown.gif \
$(top_srcdir)/lib/foldernew.gif \
$(top_srcdir)/lib/gotohome.gif \
$(top_srcdir)/lib/gotowork.gif \
$(top_srcdir)/lib/hammer_gif.gif \
$(top_srcdir)/lib/hsvmode.gif \
$(top_srcdir)/lib/infoicon.gif \
$(top_srcdir)/lib/landscape.gif \
$(top_srcdir)/lib/listmode.gif \
$(top_srcdir)/lib/miniapp.gif \
$(top_srcdir)/lib/minicdrom.gif \
$(top_srcdir)/lib/minicomputer.gif \
$(top_srcdir)/lib/minidesktop.gif \
$(top_srcdir)/lib/minidoc.gif \
$(top_srcdir)/lib/minifloppy.gif \
$(top_srcdir)/lib/minifloppy3.gif \
$(top_srcdir)/lib/minifloppy5.gif \
$(top_srcdir)/lib/minifolder.gif \
$(top_srcdir)/lib/minifolderopen.gif \
$(top_srcdir)/lib/miniharddisk.gif \
$(top_srcdir)/lib/mininetdrive.gif \
$(top_srcdir)/lib/mininethood.gif \
$(top_srcdir)/lib/minizipdrive.gif \
$(top_srcdir)/lib/newfolder.bmp \
$(top_srcdir)/lib/portrait.gif \
$(top_srcdir)/lib/questionicon.gif \
$(top_srcdir)/lib/rgbmode.gif \
$(top_srcdir)/lib/searchicon.gif \
$(top_srcdir)/lib/showbigicons.gif \
$(top_srcdir)/lib/showdetails.gif \
$(top_srcdir)/lib/showsmallicons.gif \
$(top_srcdir)/lib/sorting.bmp \
$(top_srcdir)/lib/redo_gif.gif \
$(top_srcdir)/lib/undo_gif.gif \
$(top_srcdir)/lib/warningicon.gif \
$(top_srcdir)/lib/winclose.gif \
$(top_srcdir)/lib/winmaximize.gif \
$(top_srcdir)/lib/winminimize.gif \
$(top_srcdir)/lib/winrestore.gif


CODECS = \
FX88591Codec.cpp \
FX88592Codec.cpp \
FX88593Codec.cpp \
FX88594Codec.cpp \
FX88595Codec.cpp \
FX88596Codec.cpp \
FX88597Codec.cpp \
FX88598Codec.cpp \
FX88599Codec.cpp \
FX885910Codec.cpp \
FX885911Codec.cpp \
FX885913Codec.cpp \
FX885914Codec.cpp \
FX885915Codec.cpp \
FX885916Codec.cpp \
FXCP437Codec.cpp \
FXCP850Codec.cpp \
FXCP852Codec.cpp \
FXCP855Codec.cpp \
FXCP856Codec.cpp \
FXCP857Codec.cpp \
FXCP860Codec.cpp \
FXCP861Codec.cpp \
FXCP862Codec.cpp \
FXCP863Codec.cpp \
FXCP864Codec.cpp \
FXCP865Codec.cpp \
FXCP866Codec.cpp \
FXCP869Codec.cpp \
FXCP874Codec.cpp \
FXCP1250Codec.cpp \
FXCP1251Codec.cpp \
FXCP1252Codec.cpp \
FXCP1253Codec.cpp \
FXCP1254Codec.cpp \
FXCP1255Codec.cpp \
FXCP1256Codec.cpp \
FXCP1257Codec.cpp \
FXCP1258Codec.cpp \
FXKOI8RCodec.cpp \
FXUTF8Codec.cpp \
FXUTF16Codec.cpp \
FXUTF32Codec.cpp


libFOX_1_7_la_SOURCES = \
$(CODECS) \
FX4Splitter.cpp \
FX7Segment.cpp \
FXAccelTable.cpp \
FXApp.cpp \
FXArray.cpp \
FXArrowButton.cpp \
FXAtomic.cpp \
FXAutoThreadStorageKey.cpp \
FXBarrier.cpp \
FXBMPIcon.cpp \
FXBMPImage.cpp \
FXBitmap.cpp \
FXBitmapFrame.cpp \
FXBitmapView.cpp \
FXButton.cpp \
FXBZFileStream.cpp \
FXCURCursor.cpp \
FXCalendar.cpp \
FXCalendarView.cpp \
FXCanvas.cpp \
FXCheckButton.cpp \
FXChoiceBox.cpp \
FXColorBar.cpp \
FXColorDialog.cpp \
FXColorList.cpp \
FXColorRing.cpp \
FXColors.cpp \
FXColorSelector.cpp \
FXColorWell.cpp \
FXColorWheel.cpp \
FXComboBox.cpp \
FXCompletion.cpp \
FXComplexf.cpp \
FXComplexd.cpp \
FXComposeContext.cpp \
FXComposite.cpp \
FXCondition.cpp \
FXConsole.cpp \
FXCursor.cpp \
FXDataTarget.cpp \
FXDate.cpp \
FXDC.cpp \
FXDCPrint.cpp \
FXDCWindow.cpp \
FXDDSIcon.cpp \
FXDDSImage.cpp \
FXDLL.cpp \
FXDebugTarget.cpp \
FXDelegator.cpp \
FXDial.cpp \
FXDialogBox.cpp \
FXDictionary.cpp \
FXDir.cpp \
FXDirBox.cpp \
FXDirDialog.cpp \
FXDirList.cpp \
FXDirSelector.cpp \
FXDirVisitor.cpp \
FXDirWatch.cpp \
FXDispatcher.cpp \
FXDisplay.cpp \
FXDockBar.cpp \
FXDockSite.cpp \
FXDockHandler.cpp \
FXDockTitle.cpp \
FXDocument.cpp \
FXDragCorner.cpp \
FXDrawable.cpp \
FXDriveBox.cpp \
FXEventDispatcher.cpp \
FXEventLoop.cpp \
FXException.cpp \
FXEXEIcon.cpp \
FXEXEImage.cpp \
FXExpression.cpp \
FXExtentd.cpp \
FXExtentf.cpp \
FXFile.cpp \
FXFileAssociations.cpp \
FXFileDialog.cpp \
FXFileList.cpp \
FXFileProgressDialog.cpp \
FXFileSelector.cpp \
FXFileStream.cpp \
FXFoldingList.cpp \
FXFont.cpp \
FXFontDialog.cpp \
FXFontSelector.cpp \
FXFrame.cpp \
FXGIFCursor.cpp \
FXGIFIcon.cpp \
FXGIFImage.cpp \
FXGLCanvas.cpp \
FXGLContext.cpp \
FXGLObject.cpp \
FXGLViewer.cpp \
FXGLVisual.cpp \
FXGauge.cpp \
FXGradientBar.cpp \
FXGroupBox.cpp \
FXGZFileStream.cpp \
FXhalf.cpp \
FXHash.cpp \
FXHeader.cpp \
FXHorizontalFrame.cpp \
FXICOIcon.cpp \
FXICOImage.cpp \
FXIFFIcon.cpp \
FXIFFImage.cpp \
FXIcon.cpp \
FXIconCache.cpp \
FXIconList.cpp \
FXIconSource.cpp \
FXId.cpp \
FXImage.cpp \
FXImageFrame.cpp \
FXImageView.cpp \
FXInputDialog.cpp \
FXINI.cpp \
FXINIFile.cpp \
FXIO.cpp \
FXIOBuffer.cpp \
FXIODevice.cpp \
FXJP2Icon.cpp \
FXJP2Image.cpp \
FXJPGIcon.cpp \
FXJPGImage.cpp \
FXJSON.cpp \
FXJSONFile.cpp \
FXJSONString.cpp \
FXKnob.cpp \
FXLabel.cpp \
FXLFQueue.cpp \
FXList.cpp \
FXListBox.cpp \
FXLocale.cpp \
FXMDIButton.cpp \
FXMDIChild.cpp \
FXMDIClient.cpp \
FXMainWindow.cpp \
FXMappedFile.cpp \
FXMat2d.cpp \
FXMat2f.cpp \
FXMat3d.cpp \
FXMat3f.cpp \
FXMat4d.cpp \
FXMat4f.cpp \
FXMatrix.cpp \
FXMemoryStream.cpp \
FXMenuBar.cpp \
FXMenuButton.cpp \
FXMenuCaption.cpp \
FXMenuCascade.cpp \
FXMenuCheck.cpp \
FXMenuRadio.cpp \
FXMenuCommand.cpp \
FXMenuPane.cpp \
FXMenuSeparator.cpp \
FXMenuTitle.cpp \
FXMessageBox.cpp \
FXMessageChannel.cpp \
FXMetaClass.cpp \
FXMutex.cpp \
FXObject.cpp \
FXObjectList.cpp \
FXOptionMenu.cpp \
FXPCXIcon.cpp \
FXPCXImage.cpp \
FXPNGIcon.cpp \
FXPNGImage.cpp \
FXPPMIcon.cpp \
FXPPMImage.cpp \
FXPacker.cpp \
FXParseBuffer.cpp \
FXPath.cpp \
FXPicker.cpp \
FXPipe.cpp  \
FXPopup.cpp \
FXPoint.cpp \
FXPrintDialog.cpp \
FXProcess.cpp \
FXProgressBar.cpp \
FXProgressDialog.cpp \
FXPtrList.cpp \
FXPtrQueue.cpp \
FXQuatd.cpp \
FXQuatf.cpp \
FXRASIcon.cpp \
FXRASImage.cpp \
FXRGBIcon.cpp \
FXRGBImage.cpp \
FXRadioButton.cpp \
FXRandom.cpp \
FXRangef.cpp \
FXRanged.cpp \
FXRangeSlider.cpp \
FXReactor.cpp \
FXReactorCore.h \
FXReadWriteLock.cpp \
FXRealSlider.cpp \
FXRealSpinner.cpp \
FXRecentFiles.cpp \
FXRectangle.cpp \
FXRegion.cpp \
FXRegistry.cpp \
FXReplaceDialog.cpp \
FXReverseDictionary.cpp \
FXRex.cpp \
FXRootWindow.cpp \
FXRuler.cpp \
FXRulerView.cpp \
FXScopedThread.cpp \
FXScrollArea.cpp \
FXScrollBar.cpp \
FXScrollPane.cpp \
FXScrollWindow.cpp \
FXSearchDialog.cpp \
FXSemaphore.cpp \
FXSemaQueue.cpp \
FXSeparator.cpp \
FXSettings.cpp \
FXShell.cpp \
FXShutter.cpp \
FXSize.cpp \
FXSlider.cpp \
FXSocket.cpp \
FXSpinner.cpp \
FXSpinLock.cpp \
FXSpheref.cpp \
FXSphered.cpp \
FXSplashWindow.cpp \
FXSplitter.cpp \
FXSpring.cpp \
FXStat.cpp \
FXStatusBar.cpp \
FXStatusLine.cpp \
FXStream.cpp \
FXString.cpp \
FXStringDictionary.cpp \
FXSwitcher.cpp \
FXSystem.cpp \
FXSystemTime.cpp \
FXSystemTimeFormat.cpp \
FXSystemTimeParse.cpp \
FXTGAIcon.cpp \
FXTGAImage.cpp \
FXTIFIcon.cpp \
FXTIFImage.cpp \
FXTabBar.cpp \
FXTabBook.cpp \
FXTabItem.cpp \
FXTable.cpp \
FXTaskGroup.cpp \
FXText.cpp \
FXTextCodec.cpp \
FXTextField.cpp \
FXThread.cpp \
FXThreadPool.cpp \
FXToggleButton.cpp \
FXToolBar.cpp \
FXToolBarGrip.cpp \
FXToolBarShell.cpp \
FXToolBarTab.cpp \
FXToolTip.cpp \
FXTopWindow.cpp \
FXTranslator.cpp \
FXTreeList.cpp \
FXTreeListBox.cpp \
FXTriStateButton.cpp \
FXUndoList.cpp \
FXURL.cpp \
FXVariant.cpp \
FXVariantArray.cpp \
FXVariantMap.cpp \
FXVec2d.cpp \
FXVec2f.cpp \
FXVec3d.cpp \
FXVec3f.cpp \
FXVec4d.cpp \
FXVec4f.cpp \
FXVerticalFrame.cpp \
FXVisual.cpp \
FXWEBPIcon.cpp \
FXWEBPImage.cpp \
FXWindow.cpp \
FXWizard.cpp \
FXWorker.cpp \
FXWSQueue.cpp \
FXXML.cpp \
FXXMLFile.cpp \
FXXMLString.cpp \
FXXBMIcon.cpp \
FXXBMImage.cpp \
FXXPMIcon.cpp \
FXXPMImage.cpp \
fxascii.cpp \
fxbase64.cpp \
fxbase85.cpp \
fxchar.cpp \
fxcpuid.cpp \
fxbmpio.cpp \
fxcompose.cpp \
fxddsio.cpp \
fxezquantize.cpp \
fxexeio.cpp \
fxfsquantize.cpp \
fxgifio.cpp \
fxiffio.cpp \
fxjpegio.cpp \
fxjp2io.cpp \
fxkeyboard.cpp \
fxkeysym.cpp \
fxleaps.cpp \
fxmath.cpp \
fxntp.cpp \
fxosver.cpp \
fxparsegeometry.cpp \
fxpcxio.cpp \
fxpngio.cpp \
fxppmio.cpp \
fxprintf.cpp \
fxpriv.h \
fxpriv.cpp \
fxpsio.cpp \
fxrasio.cpp \
fxrgbio.cpp \
fxscanf.cpp \
fxstrtoll.cpp \
fxstrtoull.cpp \
fxstrtod.cpp \
fxtabbify.cpp \
fxtargaio.cpp \
fxtifio.cpp \
fxunicode.cpp \
fxutils.cpp \
fxwebpio.cpp \
fxwuquantize.cpp \
fxxbmio.cpp \
fxxpmio.cpp \
leapseconds.h \
icons.cpp \
icons.h \
jitter.h

BUILT_SOURCES = icons.h icons.cpp

icons.h: $(ICONS)
	$(RESWRAP) -nc -h -n FX -o $@ $^

icons.cpp: $(ICONS)
	$(RESWRAP) -nc -i icons.h -n FX -o $@ $^

EXTRA_DIST = \
version.rc \
version.rc.in \
$(CURSORS) \
$(ICONS)
